# ollama-duet

./: .flake8  .gitignore  LICENSE  README.md  conversation_history.html  conversation_history.json  pyproject.toml
llmloop/: dialogue_render.py  main.py
ollama-duet/: autogen_groupchat.py  main.py
