[tool.poetry]
name = "ollama-duet"
version = "0.1.0"
description = ""
authors = ["Christian Dalager <christian.dalager@eksponent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
